--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <p class="answer-message">Enter Answer:</p>
             <input id="answer-box" type="number">
         </div>
-        <button data-type="submit" class="btn btn--grey">Submit Answer</button>
+        <button data-type="submit" class="btn btn--gray">Submit Answer</button>
 
     </div>
     <div class="score-area">
         <p class="score">Correct Answers <span id="score">0</span></p>
-        <p class="score">Incorrect Answers <span id="score">0</span></p>
+        <p class="score">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
 
     <script src="assets/js/script.js"></script>
